--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,56 @@
       		<artifactId>dropwizard-core</artifactId>
       		<version>0.7.0-rc2</version>
       	</dependency>
+      	
+		<dependency>
+			<groupId>com.hubspot.dropwizard</groupId>
+			<artifactId>dropwizard-guice</artifactId>
+			<version>0.7.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.reflections</groupId>
+					<artifactId>reflections</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>16.0.1</version>
+		</dependency>
+		
+		<dependency>
+			  <groupId>com.google.inject.extensions</groupId>
+			  <artifactId>guice-multibindings</artifactId>
+			  <version>3.0</version>
+		</dependency>
+
+      	<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-servlet</artifactId>
+			<version>3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-guice</artifactId>
+			<version>1.17.1</version>
+		</dependency>
+      	
+      	
       
       </dependencies>
   </dependencyManagement>
+  
+  <dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.12.0</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
   
   <repositories>
         <repository>
@@ -54,5 +101,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>dropwizardry-config-hocon</module>
+        <module>dropwizardry-guice</module>
+        <module>dropwizardry-jersey</module>
     </modules>
 </project>
