--- a/pom.xml
+++ b/pom.xml
@@ -1,66 +1,102 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jasonclawson.dropwizardry</groupId>
-  <artifactId>dropwizardry-parent</artifactId>
-  <version>0.5.0-SNAPSHOT</version>
-  <name>Dropwizard Plus</name>
-  <description>addons for dropwizard</description>
-  <dependencyManagement>
-      <dependencies>
-      	<dependency>
-      		<groupId>com.jasonclawson</groupId>
-      		<artifactId>jackson-dataformat-hocon</artifactId>
-      		<version>1.0.0-SNAPSHOT</version>
-      	</dependency>
-      	
-      	<dependency>
-      		<groupId>io.dropwizard</groupId>
-      		<artifactId>dropwizard-core</artifactId>
-      		<version>0.7.0-rc2</version>
-      	</dependency>
-      	
-		<dependency>
-			<groupId>com.hubspot.dropwizard</groupId>
-			<artifactId>dropwizard-guice</artifactId>
-			<version>0.7.0-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.reflections</groupId>
-					<artifactId>reflections</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		
-		
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>16.0.1</version>
-		</dependency>
-		
-		<dependency>
-			  <groupId>com.google.inject.extensions</groupId>
-			  <artifactId>guice-multibindings</artifactId>
-			  <version>3.0</version>
-		</dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.jasonclawson.dropwizardry</groupId>
+	<artifactId>dropwizardry-parent</artifactId>
+	<version>0.5.0-SNAPSHOT</version>
+	<name>Dropwizard Plus</name>
+	<description>addons for dropwizard</description>
+	<url>https://github.com/jclawson/dropwizardry</url>
 
-      	<dependency>
-			<groupId>com.google.inject.extensions</groupId>
-			<artifactId>guice-servlet</artifactId>
-			<version>3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey.contribs</groupId>
-			<artifactId>jersey-guice</artifactId>
-			<version>1.17.1</version>
-		</dependency>
-      	
-      	
-      
-      </dependencies>
-  </dependencyManagement>
-  
-  <dependencies>
+	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+	</properties>
+
+	<scm>
+		<connection>scm:git:git:github.com/jclawson/dropwizardry.git</connection>
+		<developerConnection>scm:git:git@github.com:jclawson/dropwizardry.git</developerConnection>
+		<url>https://github.com/jclawson/dropwizardry/</url>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>jclawson</id>
+			<name>Jason Clawson</name>
+			<email>jason.clawson@gmail.com</email>
+			<timezone>-7</timezone>
+		</developer>
+	</developers>
+
+	<licenses>
+		<license>
+			<name>GNU LESSER GENERAL PUBLIC LICENSE VERSION 3</name>
+			<url>http://www.gnu.org/licenses/lgpl.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/jclawson/dropwizardry/issues</url>
+	</issueManagement>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Nexus Release Repository</name>
+			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.jasonclawson</groupId>
+				<artifactId>jackson-dataformat-hocon</artifactId>
+				<version>1.0.8</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.dropwizard</groupId>
+				<artifactId>dropwizard-core</artifactId>
+				<version>0.7.0-rc2</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>16.0.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.inject.extensions</groupId>
+				<artifactId>guice-multibindings</artifactId>
+				<version>3.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.inject.extensions</groupId>
+				<artifactId>guice-servlet</artifactId>
+				<version>3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.jersey.contribs</groupId>
+				<artifactId>jersey-guice</artifactId>
+				<version>1.17.1</version>
+			</dependency>
+
+
+
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -68,40 +104,91 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-  
-  <repositories>
-        <repository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-    
-    <build>
-		<plugins>
 
+	<repositories>
+		<repository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus Snapshots</name>
+			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<build>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.source}</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<parallel>classes</parallel>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.8.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-    
-    <packaging>pom</packaging>
-    <modules>
-        <module>dropwizardry-config-hocon</module>
-        <module>dropwizardry-guice</module>
-        <module>dropwizardry-jersey</module>
-    </modules>
+
+	<packaging>pom</packaging>
+	<modules>
+		<module>dropwizardry-config-hocon</module>
+		<module>dropwizardry-guice</module>
+		<module>dropwizardry-jersey</module>
+	</modules>
 </project>
