--- a/dropwizardry-config-hocon/pom.xml
+++ b/dropwizardry-config-hocon/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.jasonclawson.dropwizardry</groupId>
     <artifactId>dropwizardry-parent</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0</version>
   </parent>
   <artifactId>dropwizardry-config-hocon</artifactId>
   <name>HOCON configuration support</name>
