--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonclawson.dropwizardry</groupId>
 	<artifactId>dropwizardry-parent</artifactId>
-	<version>0.5.0-SNAPSHOT</version>
+	<version>0.5.0</version>
 	<name>Dropwizard Plus</name>
 	<description>addons for dropwizard</description>
 	<url>https://github.com/jclawson/dropwizardry</url>
@@ -17,7 +16,8 @@
 		<connection>scm:git:git:github.com/jclawson/dropwizardry.git</connection>
 		<developerConnection>scm:git:git@github.com:jclawson/dropwizardry.git</developerConnection>
 		<url>https://github.com/jclawson/dropwizardry/</url>
-	</scm>
+	  <tag>dropwizardry-parent-0.5.0</tag>
+  </scm>
 
 	<developers>
 		<developer>
