--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonclawson.dropwizardry</groupId>
 	<artifactId>dropwizardry-parent</artifactId>
-	<version>0.5.1</version>
+	<version>0.5.2-SNAPSHOT</version>
 	<name>Dropwizardry Parent</name>
 	<description>Addons for Dropwizard</description>
 	<url>https://github.com/jclawson/dropwizardry</url>
@@ -16,7 +16,7 @@
 		<connection>scm:git:git:github.com/jclawson/dropwizardry.git</connection>
 		<developerConnection>scm:git:git@github.com:jclawson/dropwizardry.git</developerConnection>
 		<url>https://github.com/jclawson/dropwizardry/</url>
-	  <tag>dropwizardry-parent-0.5.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<developers>
