--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jasonclawson.dropwizardry</groupId>
 	<artifactId>dropwizardry-parent</artifactId>
-	<version>0.5.2-SNAPSHOT</version>
+	<version>0.5.3-SNAPSHOT</version>
 	<name>Dropwizardry Parent</name>
 	<description>Addons for Dropwizard</description>
 	<url>https://github.com/jclawson/dropwizardry</url>
@@ -30,8 +30,8 @@
 
 	<licenses>
 		<license>
-			<name>GNU LESSER GENERAL PUBLIC LICENSE VERSION 3</name>
-			<url>http://www.gnu.org/licenses/lgpl.txt</url>
+			<name>Apache License Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
